# well-look-at-that

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-code-scan.yml
docs/plans/: 20260602T073236Z_initial_packaging_ledger.md  20260602T083433Z_tests_ci_release_report_ledger.md  20260602T115418Z_codex_token_accounting_fix_ledger.md  20260602T193944Z_wlat_v2_1_token_accounting_fix_ledger.md  20260603T011306Z_wlat_0_2_2_period_economic_readiness_ledger.md
examples/: README.md  token_entitlements.example.tsv  token_prices.example.yml
src/well_look_at_that/: __init__.py  __main__.py  accounting.py  cli.py  economics.py  model.py  plots.py  redaction.py  reports.py  runner.py  tsv.py  value.py
src/well_look_at_that/collectors/: __init__.py  codex.py  github.py
tests/: test_codex_collect.py  test_contracts.py  test_reports_plots_cli.py  test_token_accounting.py
